--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "license": "MIT",
   "author": "Basheer Almomani",
-  "type": "module",
   "scripts": {
     "start": "npx gulp && npx resume serve --theme .",
     "export": "npx gulp && npx resume export resume --format pdf --theme ."
@@ -38,7 +37,7 @@
     "gulp-load-plugins": "^2.0.1",
     "gulp-plumber": "^1.1.0",
     "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^5.1.0",
     "gulp-serve": "^1.4.0",
     "gulp-size": "^3.0.0",
     "gulp-uglify": "^3.0.2",
@@ -58,7 +57,7 @@
     "iso-3166-1": "^2.1.1",
     "markdown-it": "^13.0.1",
     "moment": "^2.17.1",
-    "node-sass": "4.14.0",
+    "sass": "^1.60.0",
     "resume-cli": "^2.2.4",
     "swag": "^0.7.0"
   }
